css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

[disabled],
[data-disabled] {
  opacity: .7;
  cursor: not-allowed;
}

[hidden] {
  visibility: hidden;
}

/* prevent flash of white content when navigating thumbnails */
html,
body {
  height: 100vh;
  overflow: hidden;
}

body {
  font-family: sans-serif;
  margin: 0;
}

fieldset {
  padding: 0;
  border: 0;
  margin: 0;
}

/* headings */

.h-title {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: var(--text-medium);
  font-weight: normal;
  margin: 0;
}

.h-preset-name {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: var(--text-small);
  font-weight: normal;
  margin: 0;
}

.h-preset-name > span {
  color: var(--color-secondary);
}

.h-medium {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: var(--text-medium);
  font-weight: normal;
}

.h-small {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: var(--text-smaller);
  font-weight: normal;
  text-transform: uppercase;
}

/* cropper */

img {
  display: block;
  max-width: 100%;
}

.img-container {
  position: relative;
}

.img-container > h2 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  background-color: rgba(0, 0, 0, .7);
  color: var(--color-primary);
  font-size: var(--text-tiny);
  padding: var(--gutter-half);
  margin: var(--gutter-half);
}

.cropper-master {
  grid-area: master;

  position: relative; /* AP */
  width: 100%;
  min-height: var(--height-cropper-master);
  max-height: var(--height-cropper-master);
  background-color: var(--color-bg-light);
  text-align: center;
}

.cropper-master > h2 {
  right: auto;
  left: 0;
}

.cropper-master .cropper-face {
  opacity: 0;
}

.cropper-master .cropper-crop-box,
.cropper-master .cropper-view-box {
  border-radius: 50%;
}

[data-cropper-focalpoint-loading] .cropper-master .cropper-crop-box {
  visibility: hidden;
}

.cropper-master .cropper-view-box {
  box-shadow: 0 0 0 var(--width-cropper-view-box) var(--color-border-cropper-view-box);
  outline: 0;
}

.cropper-hide {
  display: none; /* .cropper-hidden is used by cropperjs */
}

.title {
  background-color: var(--color-bg-secondary);
  color: var(--color-primary);
  padding: var(--gutter);
  border-bottom: 1px dotted var(--color-border-secondary);
}

.editor {
  position: relative; /* AP */
  background-color: var(--color-bg-secondary);
}

.croppers > .img-container {
  background-color: var(--color-bg-image);
}

.croppers > .img-container > .cropper-image {
  visibility: hidden; /* allows presumed dimension calculations without FOUC */
  max-width: 100%;
}

.cropper-modal {
  opacity: var(--opacity-modal-overlay);
}

/* .thumbs */

.thumbs {
  counter-reset: thumb-counter;
  background-color: var(--color-bg-primary);
  padding-bottom: calc(var(--height-image-meta) + var(--height-cropper-console) - var(--gutter)); /* space for position:fixed elements */
  border: var(--gutter) solid var(--color-bg-primary);
  border-width: calc(var(--gutter-half) - 1px) var(--gutter);
  scroll-behavior: auto;
  overflow-x: auto;
}

.thumbs-list {
  display: flex;
  position: relative; /* display focus outline */
  z-index: 3; /* display focus outline */
  height: 100%;
  align-items: stretch; /* height of container */
  flex-direction: row;
  flex-wrap: nowrap;
  gap: var(--gutter);
  list-style: none;
  padding: calc(1px + var(--gutter-half)) 0;
  margin: 0;
}

.thumb {
  position: relative;
  width: 7.8vw;
  flex-shrink: 0;
  background-color: var(--color-bg-thumb); /* fill below image */
}

.thumb-index {
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  /* same as h2 */
  background-color: rgba(0, 0, 0, .7);
  color: var(--color-primary);
  font-size: var(--text-tiny);
  padding: var(--gutter-half);
  margin: var(--gutter-half);
  pointer-events: none;
}

.thumb-img {
  width: 100%;
  height: auto;
  border-bottom: var(--gutter-half) solid;
  filter: grayscale(10%) brightness(var(--opacity-thumb-brightness));
}

.btn-selected .thumb-img {
  filter: none;
}

.thumb-img-wrapper {
  position: relative;
}

.thumb-img-wrapper::before {
  content: '';
  position: absolute;
  top: calc(var(--image-percent-y) - 2px);
  left: calc(var(--image-percent-x) - 2px);
  z-index: 1;
  width: 1rem;
  height: 1rem;
  border: 2px solid var(--focalpoint-default);
  border-radius: 100%;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1);
  margin: -.5rem 0 0 -.5rem;
  backdrop-filter: saturate(1.1) brightness(1.3);
}

/* style="--image-percent-x: n%; --image-percent-y: n%;" */
.btn-thumb[style^='--image-percent-x'] .thumb-img-wrapper::before {
  border-color: var(--focalpoint-saved);
}

.thumb-meta {
  background-color: var(--color-bg-secondary);
  color: var(--color-tertiary);
  font-size: var(--text-tiny);
  text-align: center;
  padding: var(--gutter-half) var(--gutter);
  margin: .1rem 0;
}

.thumb-meta-day-time,
.thumb-meta-date {
  display: block;
}

.thumb-meta-date {
  opacity: .9;
  font-size: .95em;
}

/* .image-meta */

.image-meta {
  position: fixed;
  right: 0;
  bottom: var(--height-cropper-console);
  left: 0;
  z-index: 2; /* overlap focalpoint circles */
  height: var(--height-image-meta);
  background-color: var(--color-bg-tertiary);
  color: var(--color-secondary);
  font-size: var(--text-regular);
  padding: 0 var(--gutter);
  border: var(--gutter) solid var(--color-bg-primary);
  margin: 0;
  overflow: hidden; /* height */
}

.l-horz-list > .thumb-count:not(:empty) {
  margin-right: var(--gutter);
}

.l-horz-list > .h-small {
  margin-left: calc(var(--gutter-half));
}

.image-meta .thumb-filename {
  color: var(--color-primary-75);
}

.image-meta * {
  color: var(--color-tertiary);
}

.image-meta-group {
  background-color: var(--color-bg-darker);
  padding: var(--gutter);
  border-radius: .3em;
  margin-left: var(--gutter);
}

.l-image-meta + .l-image-meta .image-meta-group {
  padding-top: 0;
}

.image-meta-group:first-child {
  margin-left: 0;
}

/* .control-action, .control-param */

.controls {
  height: var(--height-controls-inner);
  color: var(--color-primary);
  font-size: 1rem;
  font-weight: 300;
  padding: var(--gutter);
}

.controls .h-small,
dialog .h-small {
  display: block;
  color: var(--color-secondary);
  margin-bottom: var(--gutter);
}

.control-param {
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  padding-right: var(--gutter-half);
}

.control-param,
.control-action {
  padding: var(--gutter-half) var(--gutter);
  border: 1px solid var(--color-border-secondary);
  border-radius: .2em;
}

.l-horz-list > .control-action {
  margin: 0;
}

.control-action:focus,
.control-action:active,
.control-param:focus-within {
  border-color: var(--color-focus);
  box-shadow: 0 0 0 1px var(--color-focus);
}

.control-action:focus,
.control-action:active,
.control-param:focus-within :focus {
  outline: none;
}

.control-action:focus .label,
.control-action:active .label,
.control-param:focus-within .radios-label,
.control-param label:focus-within,
.control-param input:focus + label,
.control-param input:active + label {
  color: var(--color-focus);
}

.control-param input:focus + label[for],
.control-param input:active + label[for] {
  opacity: 1;
}

.control-param input::selection {
  background-color: transparent;
}

.control-action .label,
.control-hint {
  display: block;
  white-space: nowrap;
}

.control-hint {
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.control-action.control-filter,
.control-action.control-source,
.control-hint {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 0.7em;
}

.control-filter {
  width: 19.15rem;
}

.control-source {
  width: 19.15rem;
}

.control-label {
  white-space: nowrap;
  margin-right: var(--gutter-half);
}

.control-label[for] {
  opacity: .75;
}

.controls input {
  background-color: inherit;
  color: var(--color-input);
  font-size: inherit;
  padding: 0;
  border: 0;
  margin: 0 var(--gutter-half) 0 0;
}

.controls input[type='number'] {
  width: 3em; /* 1 dp */
}

.controls input[type='number']::-webkit-inner-spin-button {
  opacity: 1; /* force display of increment/decrement buttons */
}

.control-action {
  background-color: inherit;
  color: var(--color-input);
  font-size: 1em;
  overflow: hidden; /* small viewports */
}

.control-action[readonly] {
  color: var(--color-input-readonly);
  cursor: not-allowed;
}

.control-action.control-action-small {
  width: 100%;
  font-size: .9em;
  text-transform: uppercase;
  padding: var(--gutter-half);
}

.control-action .label {
  display: block;
}

.radios-label {
  white-space: nowrap;
  margin-right: var(--gutter);
}

input[type='radio'] {
  display: grid;
  width: 1em;
  height: 1em;
  background-color: var(--color-input);
  color: currentColor;
  font-family: inherit;
  border: 0.15em solid currentColor;
  border-radius: 50%;
  margin: 0;
  transform: translateY(0.075em);
  place-content: center;
  appearance: none;
}

input[type='radio']::before {
  content: '';
  width: 0.65em;
  height: 0.65em;
  background-color: CanvasText;
  border-radius: 50%;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
}

input[type='radio'][value='on']::before {
  box-shadow: inset 1em 1em var(--color-checked-on);
}

input[type='radio'][value='off']::before {
  box-shadow: inset 1em 1em var(--color-checked-off);
}

input[type='radio']:checked::before {
  transform: scale(1);
}

input[type='radio']:focus {
  outline: max(2px, 0.15em) solid var(--color-focus);
  outline-offset: max(2px, 0.15em);
}

select {
  width: 100%;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0 1em 0 0;
  border: none;
  margin: 0;
  cursor: inherit;
  appearance: none;
}

/* .btn-thumb */

.btn-thumb {
  display: grid; /* aligns child img to top */
  position: relative;
  height: 100%;
  background: transparent;
  padding: 0;
  border: 0;
  margin: 0;
  overflow: hidden; /* short UI */
}

.btn-thumb .thumb-meta {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: var(--gutter);
  margin: 0;
}

.btn-thumb::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: var(--gutter-half) solid;
}

/* note: if Dev Tools console is open it will steal the focus */
.btn-thumb:focus {
  outline: var(--gutter-half) solid var(--color-border-focussed);
  outline-offset: 1px;
}

.btn-thumb.btn-selected::after {
  border-color: var(--color-border-active);
}

.btn-selected .thumb-meta {
  color: var(--color-primary);
}

/* Media Queries */

@media (prefers-color-scheme: dark) {
  --color-tertiary: rgba(119, 119, 119, 1);
  --color-bg-secondary: rgba(30, 30, 30, 1);
  --opacity-modal-overlay: .8;
  --opacity-thumb-brightness: .5;
}

